# realman-robot

./: .gitignore  README.md  grasping_task.py
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/agv_control/: .catkin  local_setup.sh
devel/.private/arm_control/: .catkin
devel/.private/arm_driver/: .catkin  .rosinstall  setup.sh
devel/.private/aruco/: .catkin  .rosinstall  setup.sh
devel/.private/aruco_msgs/: .catkin  .rosinstall
logs/arm_control/: build.make.000.log.stderr
logs/aruco_ros/: build.make.000.log.stderr
logs/dual_arm_msgs/: build.cmake.000.log.stderr
logs/rm_75_control/: build.make.000.log.stderr
logs/rm_75_driver/: build.make.000.log.stderr
logs/rm_75_msgs/: build.cmake.000.log.stderr
logs/xf_mic_asr_offline_line/: build.make.000.log.stderr
src/: arm.py  camera.py  grasper.py
src/75demo/: left_arm_up_Python.py  linux_arm_base_release_v4.2.5.tar.bz2  linux_x86_base_release_v4.2.5.tar.bz2  right_arm_up_Python.py
src/arm_package/: libRM_Base.so.1.0.0  robotic_arm.py
src/cfg/: cam2base_H.csv  intrinsic.txt
src/dual_arm_robot/dual_arm_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/robotic_arm_package/: libRM_Base.so.1.0.0  robotic_arm.py
src/xf_mic_asr_offline_line/: CMakeLists.txt
test/: test_move_and_record.py  test_open_realsense.py  test_serial_move_head.py  test_socker_move_gripper.py  test_socket_move_arm.py  test_socket_move_base.py  test_socket_move_gripper.py
test/robotic_arm_package_1/: log_setting.py  robotic_arm.py
test/robotic_arm_package_2/: robotic_arm.py
(+1121 files in other folders)
